<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:background="#E6E2E2"
        android:gravity="center_vertical|end"
        android:text="@string/_0"
        android:textSize="100sp"
        android:textStyle="normal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:stretchColumns="1,2,3,4">

        <TableRow android:layout_weight="1">

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/ce" />

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/c" />

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/bs" />

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/chia" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/_7" />

            <Button
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/_8" />

            <Button
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/_9" />

            <Button
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/x" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/_4" />

            <Button
                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/_5" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"

                android:text="@string/_6" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/tru" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/_1" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"

                android:text="@string/_2" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"

                android:text="@string/_3" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/cong" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:text="@string/tichhop" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"

                android:text="@string/zero" />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="." />

            <Button
                style="?attr/materialButtonOutlinedStyle"

                android:layout_height="match_parent"

                android:layout_marginHorizontal="2dp"
                android:text="@string/bang" />
        </TableRow>
    </TableLayout>
</LinearLayout>
